force-app/main/default/objects/Supply__c/fields/Supply_Order__c.field-meta.xml
<CustomField>
    <fullName>Supply_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supply Order</label>
    <referenceTo>Supply_Order__c</referenceTo>
    <relationshipLabel>Supplies</relationshipLabel>
    <relationshipName>Supplies</relationshipName>
    <type>Lookup</type>
</CustomField>