force-app/main/default/objects/Supply__c/listViews/Running_Low.listView-meta.xml
<ListView>
    <fullName>Running_Low</fullName>
    <booleanFilter>1</booleanFilter>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stock__c</field>
        <operation>lessOrEqual</operation>
        <value>20</value>
    </filters>
    <label>Running Low</label>
</ListView>